more practice in the notebook

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -73,18 +73,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "# Write any import statements here\n",
@@ -119,18 +108,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getMaxAdditionalDinersCount(N: int, K: int, M: int, S: List[int]) -> int:\n",
+    "  # Write your code here\n",
+    "  c = 0  # counter\n",
+    "  S_set = set(S)  # convert list to set for faster lookups\n",
+    "  i = 1\n",
+    "\n",
+    "  while i <= N:\n",
+    "    if i not in S_set:\n",
+    "      # check if the seat is not already occupied and no adjacent seats are occupied\n",
+    "      if all((i + k not in S_set and i - k not in S_set) for k in range(1, K + 1)):\n",
+    "        c += 1\n",
+    "        S_set.add(i)\n",
+    "        i += K  # skip K seats ahead\n",
+    "    i += 1\n",
+    "\n",
+    "  return c\n",
+    "\n",
+    "# Example usage\n",
+    "result_optimized = getMaxAdditionalDinersCount(10, 1, 2, [2, 6])\n",
+    "print(result_optimized)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n"
+     ]
     }
    ],
    "source": [
@@ -151,8 +174,29 @@
     "\n",
     "  return c\n",
     "           \n",
-    "getMaxAdditionalDinersCount(10, 1, 2, [2, 6])\n"
+    "getMaxAdditionalDinersCount(10, 1, 2, [2, 6])\n",
+    "# Example usage without modifying the original list S\n",
+    "result = getMaxAdditionalDinersCount(10, 1, 2, [2, 6])\n",
+    "print(result)\n",
+    "\n",
+    "# Optimized function for faster execution\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
